CI: replace make_release.sh with a Python version
Previously, make_install.sh would use rebuild udev-hid-bpf and use meson
introspect to generate an install.sh/uninstall.sh script that installed
all built artifacts.

We have a use-case for building the bpf.o files separately from the
binary so we can built the former with the latest libbpf but the latter
with the oldest glibc it works on for max. compatibility.

This commit adds two new scripts:
- make-release.py which replaces make_release.sh. Unlike the previous
  one this one does not actually rebuilt, instead it uses an installed
  tree and converts that over to a new target directory with the
  generated {un}install.sh files (using a jinja template)
- make-combined-release.sh: this replaces the logic previously in
  .gitlab-ci.yml so it's easier to test. It takes an installed
  tree, rebuilds udev-hid-bpf without any bpfs and then combines
  the installed tree and the rebuilt binary into the release tarball
  that we use as artifact of the gitlab CI job

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/.gitlab-ci/uninstall.sh.jinja
+++ b/.gitlab-ci/uninstall.sh.jinja
@@ -55,9 +55,15 @@ fi
 
 echo "Using sudo to remove files from $PREFIX. You may be asked for your password now"
 dryrun_sudo="$DRY_RUN sudo"
-@@UNINSTALL_COMMANDS@@
+{% for bpf in bpfs %}
+$dryrun_sudo rm -f "$PREFIX/{{bpf.path}}"
+{% endfor %}
+{% for udev in udev_rules %}
+$dryrun_sudo rm -f "$UDEVDIR"/udev/rules.d/{{udev.filename}}
+{% endfor %}
+{% for hwdb in hwdb_files %}
+$dryrun_sudo rm -f "$UDEVDIR"/udev/hwdb.d/{{hwdb.filename}}
+{% endfor %}
 $dryrun_sudo rm -f "$PREFIX"/bin/udev-hid-bpf
-$dryrun_sudo rm -f "$UDEVDIR"/udev/rules.d/81-hid-bpf.rules
-$dryrun_sudo rm -f "$UDEVDIR"/udev/hwdb.d/81-hid-bpf-*.hwdb
 $DRY_RUN sudo udevadm control --reload
 $DRY_RUN sudo systemd-hwdb update
