--- a/.gitlab-ci/install.sh.jinja
+++ b/.gitlab-ci/install.sh.jinja
@@ -57,9 +57,15 @@ find ./ -name "*.rules" -exec sed -i "s|@@BINDIR@@|$PREFIX/bin|" {} \;
 
 echo "Using sudo to install files into $PREFIX. You may be asked for your password now"
 dryrun_sudo="$DRY_RUN sudo"
-@@INSTALL_COMMANDS@@
-$dryrun_sudo install -D -t "$PREFIX"/bin/ "$SCRIPT_DIR"/bin/udev-hid-bpf
-$dryrun_sudo install -D -m 644 -t "$UDEVDIR"/udev/rules.d "$SCRIPT_DIR"/lib/udev/rules.d/81-hid-bpf.rules
-$dryrun_sudo install -D -m 644 -t "$UDEVDIR"/udev/hwdb.d "$SCRIPT_DIR"/lib/udev/hwdb.d/81-hid-bpf-*.hwdb
+{% for bpf in bpfs %}
+$dryrun_sudo install -D -t "$PREFIX/{{bpf.dir}}" "$SCRIPT_DIR/{{bpf.path}}"
+{% endfor %}
+{% for rule in udev_rules %}
+$dryrun_sudo install -D -m 644 -t "$UDEVDIR"/udev/rules.d "$SCRIPT_DIR"/{{rule.path}}
+{% endfor %}
+{% for hwdb in hwdb_files %}
+$dryrun_sudo install -D -m 644 -t "$UDEVDIR"/udev/hwdb.d "$SCRIPT_DIR"/{{hwdb.path}}
+{% endfor %}
+$dryrun_sudo install -D -t "$PREFIX/bin/" "$SCRIPT_DIR/bin/udev-hid-bpf"
 $dryrun_sudo udevadm control --reload
 $dryrun_sudo systemd-hwdb update
